our features section buren duuslaa

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,5 +1,5 @@
 .row {
-    @mixin clearfix;
+    @mixin clearfix{};
 
     @mixin atMedium {
         &__b-margin-until-medium {
@@ -11,6 +11,10 @@
         }
         &__medium-4--larger {
             width: 37%;
+        }
+        &__medium-6 {
+            float: left;
+            width: 50%;
         }
         &__medium-8 {
             float: left;
@@ -25,6 +29,12 @@
     }
     &--gutters {
         margin-right: -65px;
+    }
+    &--gutters-large {
+        margin-right: -120px;
+    }
+    &--gutters-large > div {
+        padding-right: 120px;
     }
     &__b-margin-until-medium {
         margin-bottom: 1rem;
